Alignment fixes in login page mobile view

--- a/src/static/scss/login.scss
+++ b/src/static/scss/login.scss
@@ -106,5 +106,11 @@ $width: 500px;
       background-color: $primary-color;
       color: white;
     }
+    @include mdportrait {
+      right: 20px;
+      top: 20px;
+      font-size: 14px;
+      padding: 6px 10px;
+    }
   }
 }
